desktop-base (7.0.0~exp3) UNRELEASED; urgency=low

  [ Eshat Cakar ]
  * Updated the KDM theme.
  * Updated the ksplash theme.

 -- Eshat Cakar <info@eshat.de>  Sat, 24 Jun 2012 11:02:56 +0200

desktop-base (7.0.0~exp2) experimental; urgency=low

  * Remove GConf defaults, they are not used anymore.
  * Remove the GDM3 settings, since the configuration format for GDM
    change again, yay.
  * Add a dconf file for the new-style GDM3 configuration.
  * Add a XML file describing the available resolutions for the
    background (for use with GNOME).
  * postinst: use a higher priority for the 1920x1080 background.
  * Cleanup postinst/prerm/postrm.
  * Add a new alternative: desktop-background.xml.
  * Use it from the gsettings override.
  * Reload gdm3 after installation/removal.
  * Drop old libgnome2-common hack.
  * Clean up an alternative that is no longer available.

 -- Josselin Mouette <joss@debian.org>  Sat, 23 Jun 2012 23:28:15 +0200

desktop-base (7.0.0~exp1) experimental; urgency=low

  [ Paul Tagliamonte ]
  * Adding myself as a maintainer
  * We've got a new theme -- `joy' by Adrien Aubourg. Thanks, Adrien!
     - Theme added to backgrounds.
     - Theme added for Grub
     - Background changed for GDM3
     - Theme added for KDM & changed that to default.
     - Theme added for ksplash & changed to default.
  * Standards bump to 3.9.3
  * Pre-Dependency added for dpkg (>= 1.15.7.2~), since we use dpkg helpers
    in our preinst.
  * Add in Jonathan Carter's Plymouth theme.

  [ Jonathan Carter ]
  * Remove splashy theme since it's no longer available in archives

  [ Yves-Alexis Perez ]
  * Install emblem in the correct folder.

 -- Paul Tagliamonte <paultag@ubuntu.com>  Sat, 23 Jun 2012 13:00:47 +0200

desktop-base (6.0.7) unstable; urgency=low

  [ Josselin Mouette ]
  * Build-depend on recent cdbs+debhelper to have dh_installgsettings.
  * debian/gsettings-override: set the default background using 
    GSettings.