@@ -3,8 +3,10 @@ desktop-base (7.0.0~exp3) UNRELEASED; urgency=low
   [ Eshat Cakar ]
   * Updated the KDM theme.
   * Updated the ksplash theme.
+  [ Paul Tagliamonte ]
+  * Added joy-inksplat.xml (Closes: #678937), thanks, Fabian!
 
- -- Eshat Cakar <info@eshat.de>  Sat, 24 Jun 2012 11:02:56 +0200
+ -- Eshat Cakar <info@eshat.de>  Mon, 25 Jun 2012 09:59:15 -0400
 
 desktop-base (7.0.0~exp2) experimental; urgency=low
 
